Исправлено расположение ссылки на пример .env файла в README.md

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -39,5 +39,8 @@
             <li><a href="/login">Login</a></li>
         </ul>
     </div>
+    <div class="start">
+        <h1>Это Учёбный Проект на Flask</h1>
+    </div>
 </body>
 </html>
