Исправлено расположение ссылки на пример .env файла в README.md

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -29,6 +29,26 @@
             color: #fff;
             text-decoration: none;
         }
+        .start {
+            font-family: 'Courier New', Courier, monospace;
+            color: #fff;
+        }
+        .start h1 {
+            font-size: 36px;
+            margin: 20px 0;
+            text-align: center;
+        }
+        .start p {
+            font-size: 18px;
+            margin: 0 20px;
+            text-align: center;
+        }
+        .image-test p {
+            color: #fff;
+            text-align: center;
+            margin-top: 20px;
+            font-size: 24px;
+        }
     </style>
 </head>
 <body>
@@ -41,6 +61,13 @@
     </div>
     <div class="start">
         <h1>Это Учёбный Проект на Flask</h1>
+        <p>Добро пожаловать в мой учебный проект на Flask! </p>
+        <p>Здесь вы можете зарегистрироваться, войти в систему </p>
+        <p>И исследовать различные функции, реализованные с использованием Flask и других технологий.</p>
+    </div>
+    <div class="image-test">
+        <p>Можно так даже в Flask</p>
+        <img src="/static/icon/depositphotos_137026300-stock-photo-programmer-working-in-a-software.jpg" alt="Test Image">
     </div>
 </body>
 </html>
