Исправлено расположение ссылки на пример .env файла в README.md

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -68,6 +68,12 @@
     <div class="image-test">
         <p>Можно так даже в Flask</p>
         <img src="/static/icon/depositphotos_137026300-stock-photo-programmer-working-in-a-software.jpg" alt="Test Image">
+        <button id="next">Next</button>
+        <img src="/static/icon/depositphotos_671320912-stock-photo-programmer-developer-man-computer-coding.jpg" alt="Test Image 2">
+        <button id="prev">Prev</button>
+        <img src="/static/icon/images (1).jpeg" alt="">
     </div>
+        <script>
+        </script>
 </body>
 </html>
