--- a/frontend/templates/register.html
+++ b/frontend/templates/register.html
@@ -325,15 +325,15 @@
 
 
 
-            <form id="registerForm">
+            <form id="registerForm" method="POST" action="/register">
                 <div class="form-group">
                     <label class="form-label" for="username">Username</label>
-                    <input type="text" id="username" class="form-input" placeholder="Enter your username" required>
+                    <input type="text" id="username" name="username" class="form-input" placeholder="Enter your username" required>
                 </div>
 
                 <div class="form-group">
                     <label class="form-label" for="email">Email</label>
-                    <input type="email" id="email" class="form-input" placeholder="Enter your email" required>
+                    <input type="email" id="email" name="email" class="form-input" placeholder="Enter your email" required>
                 </div>
 
                 <div class="form-group">
@@ -347,17 +347,6 @@
                     </div>
                 </div>
 
-                <div class="form-group">
-                    <label class="form-label" for="confirmPassword">Confirm Password</label>
-                    <div class="password-container">
-                        <input type="password" id="confirmPassword" class="form-input"
-                            placeholder="Confirm your password" required>
-                        <button type="button" class="toggle-password" id="toggleConfirmPassword">
-                            <i class="far fa-eye"></i>
-                        </button>
-                    </div>
-                </div>
-
                 <div class="checkbox-group">
                     <input type="checkbox" id="agreeTerms" class="checkbox-input" required>
                     <label for="agreeTerms" class="checkbox-label">
@@ -366,6 +355,12 @@
                 </div>
 
                 <button type="submit" class="register-btn">Create Account</button>
+                
+                <div class="divider">
+                    <div class="divider-line"></div>
+                    <div class="divider-text">or</div>
+                    <div class="divider-line"></div>
+                </div>
 
                 <div class="social-login">
                     <button class="social-btn google-btn">
@@ -376,11 +371,6 @@
                     </button>
                 </div>
 
-                <div class="divider">
-                    <div class="divider-line"></div>
-                    <div class="divider-text">or</div>
-                    <div class="divider-line"></div>
-                </div>
             </form>
         </div>
     </div>
