--- a/frontend/templates/login.html
+++ b/frontend/templates/login.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flask Project - Register</title>
-    <link rel="stylesheet" href="/static/css/register.css">
+    <title>Flask Project - Login</title>
+    <link rel="stylesheet" href="/static/css/login.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
