--- a/frontend/templates/login.html
+++ b/frontend/templates/login.html
@@ -18,9 +18,9 @@
         </ul>
     </div>
 
-    <div class="register-section">
-        <div class="register-container">
-            <h2 class="register-title">Login</h2>
+    <div class="login-section">
+        <div class="login-container">
+            <h2 class="login-title">Login</h2>
 
 
 
@@ -41,7 +41,7 @@
                     </div>
                 </div>
 
-                <button type="submit" class="register-btn">Login</button>
+                <button type="submit" class="login-btn">Login</button>
                 
                 <div class="divider">
                     <div class="divider-line"></div>
@@ -51,10 +51,10 @@
 
                 <div class="social-login">
                     <button class="social-btn google-btn">
-                        <i class="fab fa-google"></i> Sign up with Google
+                        <i class="fab fa-google"></i> Login with Google
                     </button>
                     <button class="social-btn github-btn">
-                        <i class="fab fa-github"></i> Sign up with GitHub
+                        <i class="fab fa-github"></i> Login with GitHub
                     </button>
                 </div>
 
