Добавлен генератор Swagger спецификации и шаблон документации API

--- a/frontend/templates/register.html
+++ b/frontend/templates/register.html
@@ -65,9 +65,9 @@
                     <button class="social-btn google-btn">
                         <i class="fab fa-google"></i> Sign up with Google
                     </button>
-                    <button class="social-btn github-btn">
+                    <a href="/auth/github" class="social-btn github-btn">
                         <i class="fab fa-github"></i> Sign up with GitHub
-                    </button>
+                    </a>
                 </div>
 
             </form>
