Добавлено управление настройками куки и обновлены параметры безопасности с учетом совместимости

--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -8,7 +8,7 @@
 <body>
     <div class=""></div>
     {% for user in users %}
-        <p>{{ user.username }}</p>
+        <h1>Welcome, {{ user.username }}</h1>
     {% endfor %}
 </body>
 </html>
