Добавлено управление настройками куки и обновлены параметры безопасности с учетом совместимости

--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Flask Project - Home</title>
+    <link rel="stylesheet" href="/static/css/index.css">
 </head>
 <body>
-    <div class=""></div>
+    <div class="main-menu">
+        <ul>
+            <li><a href="/home">Home</a></li>
+            <li><a href="/profile">Profile</a></li>
+        </ul>
+    </div>
     {% for user in users %}
         <h1>Welcome, {{ user.username }}</h1>
     {% endfor %}
