--- a/frontend/templates/profile.html
+++ b/frontend/templates/profile.html
@@ -25,6 +25,9 @@
         <div class="user-email">
             <h3>Email: {{ user.email }}</h3>
         </div>
+        <div class="user-password">
+            <h3>Password: {{ user.password }}</h3>
+        </div>
     </div>
 </body>
 
