Добавлено оформление для страницы профиля

--- a/frontend/templates/profile.html
+++ b/frontend/templates/profile.html
@@ -6,6 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/static/css/index.css">
+    <style>
+        .profile-info {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-top: 50px;
+        }
+
+        .user-foto {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            background-color: #ccc;
+            margin-bottom: 20px;
+        }
+
+        .user-username,
+        .user-email,
+        .user-password {
+            margin: 10px 0;
+        }
+    </style>
 </head>
 
 <body>
