--- a/frontend/templates/swagger.html
+++ b/frontend/templates/swagger.html
@@ -14,7 +14,8 @@
         }
         body {
             margin:0;
-            background: #fafafa;
+            background: #000;
+            color: #fff;
         }
     </style>
 </head>
