--- a/frontend/templates/login.html
+++ b/frontend/templates/login.html
@@ -56,9 +56,9 @@
                 </div>
 
                 <div class="social-login">
-                    <button class="social-btn google-btn">
+                    <a href="/google_login" class="social-btn google-btn">
                         <i class="fab fa-google"></i> Login with Google
-                    </button>
+                    </a>
                     <a href="/auth/github" class="social-btn github-btn">
                         <i class="fab fa-github"></i> Login with GitHub
                     </a>
