Пофиксил ошибку с github oauth2 за 40 минут на стриме поправил маршруты и сделал fix BD

--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -11,6 +11,7 @@
         <ul>
             <li><a href="/home">Home</a></li>
             <li><a href="/profile">Profile</a></li>
+            <li><a href="/logout">Logout</a></li>
         </ul>
     </div>
     {% for user in users %}
