Пофиксил ошибку с github oauth2 за 40 минут на стриме поправил маршруты и сделал fix BD

--- a/frontend/templates/create_post.html
+++ b/frontend/templates/create_post.html
@@ -11,6 +11,8 @@
         <ul>
             <li><a href="/home">Home</a></li>
             <li><a href="/profile">Profile</a></li>
+            <li><a href="/create_post">Create Post</a></li>
+            <li><a href="/logout">Logout</a></li>
         </ul>
     </div>
     <div class="create-post-form">
