--- a/frontend/templates/create-post.html
+++ b/frontend/templates/create-post.html
@@ -11,13 +11,13 @@
         <ul>
             <li><a href="/home">Home</a></li>
             <li><a href="/profile">Profile</a></li>
-            <li><a href="/create_post">Create Post</a></li>
+            <li><a href="/create-post">Create Post</a></li>
             <li><a href="/logout">Logout</a></li>
         </ul>
     </div>
     <div class="create-post-form">
         <h2>Create a New Post</h2>
-        <form action="/create_post" method="POST">
+        <form action="/create-post" method="POST">
             <label for="title">Title:</label><br>
             <input type="text" id="title" name="title" required><br><br>
             <label for="content">Content:</label><br>
