--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -13,7 +13,7 @@
         <ul>
             <li><a href="/home">Home</a></li>
             <li><a href="/profile">Profile</a></li>
-            <li><a href="/create_post">Create Post</a></li>
+            <li><a href="/create-post">Create Post</a></li>
             <li><a href="/logout">Logout</a></li>
         </ul>
     </div>
