--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -27,6 +27,7 @@
         <div class="post">
             <h2>{{ post.title }}</h2>
             <p>{{ post.content }}</p>
+            <p>Author: {{ post.user.username }}</p>
         </div>
         {% endfor %}
     </div>
