--- a/frontend/templates/profile.html
+++ b/frontend/templates/profile.html
@@ -39,7 +39,7 @@
     </div>
     <div class="profile-info">
         <div class="user-foto">
-
+            <!-- Пока что пустой -->
         </div>
         <div class="user-username">
             <h3>Name: {{ user.username }}</h3>
