--- a/frontend/templates/swagger.html
+++ b/frontend/templates/swagger.html
@@ -14,8 +14,8 @@
         }
         body {
             margin:0;
-            background: #000;
-            color: #fff;
+            background: #ffffff;
+            color: #000000;
         }
     </style>
 </head>
