--- a/frontend/templates/errors/451.html
+++ b/frontend/templates/errors/451.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Internal Server Error</title>
+    <title>Unavailable For Legal Reasons</title>
     <link rel="stylesheet" href="/static/css/index.css">
-    <style>
-    </style>
+    <link rel="stylesheet" href="/static/css/errors/css/451.css">
 </head>
 <body>
     <div class="error-container">
@@ -18,11 +17,11 @@
         </div>
 
         <!-- Основной контент -->
-        <div class="error-number glitch" data-text="500">500</div>
+        <div class="error-number glitch" data-text="451">451</div>
         
         <div class="error-content">
-            <h1>Internal Server Error</h1>
-            <p>Oops! Something went wrong on our end. Our technical team has been notified and is working to fix the issue. Please try again later.</p>
+            <h1>Unavailable For Legal Reasons</h1>
+            <p>We are sorry, but the content you are trying to access is not available for legal reasons.</p>
             <a href="/" class="home-button">Back to Home</a>
         </div>
     </div>
